--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Violence Reporting Application</string>
-    <string name="fake_app_name">Calendar</string>
+    <string name="fake_app_name">RSS Feed</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="title_sign_in">Sign in</string>
@@ -130,4 +130,7 @@
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
     </string>
+
+    <string name="rationale_storage">This sample reads images from your camera to demonstrate uploading.</string>
+
 </resources>
